<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mainlinear"
        android:weightSum="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3"
            android:id="@+id/linearContainer"
            android:background="@color/register_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/register_red"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_gravity="center"
                android:padding="5dp"/>
            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:hint="@string/fullname"
                android:inputType="text"
                android:background="@drawable/text_shape"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:hint="@string/password"
                android:background="@drawable/text_shape"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:weightSum="3">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/codeSpinner"
                    android:layout_weight="2"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/spinner_shape"/>

                <EditText
                    android:id="@+id/codeplace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:layout_marginStart="3dp"
                    android:hint="@string/codeplace"
                    android:layout_weight="1"
                    android:background="@drawable/text_shape"/>

            </LinearLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_shape"/>

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/spinner_shape"/>

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/spinner_shape"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/by"
                    />
                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/register_red"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/reg"
                    />
                <TextView
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/agree"
                    />
                <TextView
                    android:id="@+id/term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/register_red"
                    android:text="@string/term"
                    />

            </LinearLayout>
            </FrameLayout>


        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relativebtn"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/register_red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@color/text_color"/>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>